# genx

./: CMakeLists.txt  dist.info  genx-0.5.0-1.rockspec  lgenx.c  lgenx.luadoc
share/genx/doc/: api.html  index.html  license.html  manual.html
share/genx/test/: test.lua
